fix: grid z-index issues

--- a/imports/plugins/included/default-theme/client/styles/accounts/accounts.less
+++ b/imports/plugins/included/default-theme/client/styles/accounts/accounts.less
@@ -13,7 +13,6 @@
 }
 
 .accounts-dialog {
-  z-index: 2000;
   width: @accounts-dialog-width;
 
 
