--- a/imports/plugins/included/default-theme/client/styles/base.less
+++ b/imports/plugins/included/default-theme/client/styles/base.less
@@ -25,6 +25,8 @@ main {
 }
 
 .container-grid {
+  position: relative;
+  z-index: 100;
   box-sizing: content-box;
   padding: 20px 55px 20px 55px;
 
